// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BBStoreHOC Should match snapshot when using the bb store wrapper. 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <withBBStore(undefined) />
</Provider>
`;

exports[`BBStoreHOC Should match snapshot when using the connect wrapper. 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <withBBStore(Connect(Component)) />
</Provider>
`;

exports[`BBStoreHOC Should match snapshot when using the connect wrapper. 2`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <withBBStore(Connect(Component)) />
</Provider>
`;
